# factrainer

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  renovate.json  test.sh  versions.json
.claude/: settings.json
.clinerules/: 01-what-is-factrainer.md  02-development-philosophy.md  03-software-architecture.md  04-coding-standards.md
.github/: ci.yaml  dependabot.yml  renovate-config.json
.github/workflows/: cd-docs.yaml  cd-release.yaml  cd-trigger.yaml  ci.yaml  codeql.yml  update-app-deps.yaml
.github/workflows/cd/: release.yaml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/_tutorial/: index.html
0.1/examples/: index.html
0.1/examples/classification/: index.html
0.1/examples/regression/: index.html
0.1/reference/: index.html
0.1/reference/catboost/: index.html
0.1/reference/core/: index.html
0.1/reference/core/cvmodelcontainer/: index.html
0.1/reference/core/evalmode/: index.html
0.1/reference/core/predmode/: index.html
0.1/reference/core/singlemodelcontainer/: index.html
0.1/reference/core/splitteddatasetsindices/: index.html
0.1/reference/lightgbm/: index.html
0.1/reference/lightgbm/lgbdataset/: index.html
0.1/reference/lightgbm/lgbmodel/: index.html
0.1/reference/lightgbm/lgbmodelconfig/: index.html
0.1/reference/lightgbm/lgbpredictconfig/: index.html
0.1/reference/lightgbm/lgbtrainconfig/: index.html
0.1/reference/sklearn/: index.html
0.1/reference/sklearn/sklearndataset/: index.html
0.1/reference/sklearn/sklearnmodel/: index.html
0.1/reference/sklearn/sklearnmodelconfig/: index.html
0.1/reference/sklearn/sklearnpredictconfig/: index.html
0.1/reference/sklearn/sklearnpredictmethod/: index.html
0.1/reference/sklearn/sklearntrainconfig/: index.html
0.1/reference/xgboost/: index.html
0.1/search/: search_index.json
0.1/tutorial/: index.html
docs/: _tutorial.md  gen_ref_pages.py  index.md  reference.md
docs/examples/: classification.md  index.md  regression.md
docs/reference/: index.md
docs/reference/base/: index.md
docs/reference/catboost/: index.md
docs/reference/core/: cvmodelcontainer.md  evalmode.md  index.md  predmode.md  singlemodelcontainer.md  splitteddatasetsindices.md
docs/reference/core/cv/: index.md  model_container.md
docs/reference/lightgbm/: index.md  lgbdataset.md  lgbmodel.md  lgbmodelconfig.md  lgbpredictconfig.md  lgbtrainconfig.md
docs/reference/lightgbm/dataset/: index.md
docs/reference/sklearn/: index.md  sklearndataset.md  sklearnmodel.md  sklearnmodelconfig.md  sklearnpredictconfig.md  sklearnpredictmethod.md  sklearntrainconfig.md
docs/reference/xgboost/: index.md
docs/stylesheets/: extra.css
factrainer-base/: README.md  pyproject.toml
factrainer-base/src/factrainer/base/: config.py  dataset.py  raw_model.py
factrainer-catboost/: README.md  pyproject.toml
factrainer-catboost/src/factrainer/catboost/: __init__.py
factrainer-catboost/tests/: test_placeholder.py
factrainer-core/: README.md  pyproject.toml
factrainer-core/src/factrainer/core/: __init__.py  model_container.py  single.py  trait.py
factrainer-core/src/factrainer/core/cv/: config.py  cv.py  dataset.py  model_container.py  raw_model.py
factrainer-core/src/factrainer_core/: __init__.py
factrainer-lightgbm/: README.md  pyproject.toml
factrainer-lightgbm/src/factrainer/lightgbm/: __init__.py  config.py  raw_model.py
factrainer-lightgbm/tests/dataset/: test_dataset.py
factrainer-sklearn/: README.md  pyproject.toml
factrainer-sklearn/src/factrainer/sklearn/: __init__.py  config.py  dataset.py  raw_model.py
factrainer-sklearn/src/factrainer/sklearn/dataset/: dataset.py  types.py
factrainer-xgboost/: README.md  pyproject.toml
factrainer-xgboost/src/factrainer/xgboost/: __init__.py
factrainer-xgboost/tests/: test_xgb_placeholder.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/_tutorial/: index.html
latest/examples/: index.html
latest/examples/classification/: index.html
latest/examples/regression/: index.html
latest/reference/: index.html
latest/reference/catboost/: index.html
latest/reference/core/: index.html
latest/reference/core/cvmodelcontainer/: index.html
latest/reference/core/evalmode/: index.html
latest/reference/core/predmode/: index.html
latest/reference/core/singlemodelcontainer/: index.html
latest/reference/core/splitteddatasetsindices/: index.html
latest/reference/lightgbm/: index.html
latest/reference/sklearn/: index.html
latest/reference/xgboost/: index.html
latest/search/: search_index.json
latest/tutorial/: index.html
src/factrainer/: __init__.py  catboost.py  lightgbm.py  xgboost.py
src/factrainer/domain/: base.py  cv.py  single.py
stubs/sklearn/: base.pyi  datasets.pyi  ensemble.pyi  exceptions.pyi  linear_model.pyi  metrics.pyi  pipeline.pyi  preprocessing.pyi  svm.pyi
stubs/sklearn/model_selection/: __init__.pyi  _split.pyi
stubs/sklearn/utils/: _bunch.pyi
tests/: test_core.py  test_hello.py  test_lightgbm.py
tests/catboost/: conftest.py
tests/catboost/integration/: test_foo.py
tests/catboost/unit/: test_foo.py
tests/contracts/: test_lightgbm.py
tests/core/: test_cv.py  test_single.py
tests/core/cv/: test_model_container.py
tests/integration/: test_lightgbm.py
tests/lightgbm/: conftest.py
tests/lightgbm/dataset/: test_dataset.py  test_equality_checker.py  test_slicer.py
tests/lightgbm/functional/: test_dataset.py
tests/lightgbm/integration/: conftest.py  test_dataset.py  test_evaluate.py  test_integration.py  test_predict.py  test_train.py
tests/lightgbm/unit/: test_config.py  test_contract.py
tests/sklearn/: conftest.py
tests/sklearn/functional/: test_dataset.py
tests/sklearn/integration/: conftest.py  test_dataset.py  test_evaluate.py  test_foo.py  test_integration.py  test_predict.py  test_train.py
tests/sklearn/unit/: test_config.py  test_dataset.py  test_foo.py
tests/xgboost/: conftest.py
tests/xgboost/integration/: test_foo.py
tests/xgboost/unit/: test_foo.py
(+29 files in other folders)
