[project]
name = "factrainer"
version = "0.1.26"
description = "Framework Agnostic Cross-validation Trainer"
readme = "README.md"
authors = [{ name = "ritsuki1227", email = "ritsuki1227@gmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["factrainer-core"]

[project.optional-dependencies]
sklearn = ["factrainer-sklearn"]
lightgbm = ["factrainer-lightgbm"]
xgboost = ["factrainer-xgboost"]
catboost = ["factrainer-catboost"]
all = [
    "factrainer-sklearn",
    "factrainer-lightgbm",
    "factrainer-xgboost",
    "factrainer-catboost",
]

[project.urls]
Homepage = "https://github.com/ritsuki1227/factrainer/"
Documentation = "https://ritsuki1227.github.io/factrainer/stable/"
Repository = "https://github.com/ritsuki1227/factrainer/"
"Bug Tracker" = "https://github.com/ritsuki1227/factrainer/issues/"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "joblib-stubs>=1.5.2.0.20250831",
    "jupyterlab>=4.4.9",
    "mypy>=1.18.2",
    "pytest-profiling>=1.8.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "graphviz>=0.21",
    "line-profiler>=5.0.0",
    "pytest-cov>=7.0.0",
    "pytest-rerunfailures>=16.0.1",
    "pandas-stubs>=2.3.2.250926",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0 ; python_full_version < '3.14'",
    "pyarrow-stubs>=20.0.0.20250928 ; python_full_version < '3.14'",
    "polars>=1.34.0",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.7",
]
docs = [
    "mike>=2.1.3",
    "mkdocs-macros-plugin>=1.4.0",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.30.1",
    "mkdocs-section-index>=0.3.8",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-literate-nav>=0.6.1",
]

[tool.uv.workspace]
members = [
    "factrainer-base",
    "factrainer-core",
    "factrainer-sklearn",
    "factrainer-lightgbm",
    "factrainer-xgboost",
    "factrainer-catboost",
]

[tool.uv.sources]
factrainer-base = { workspace = true }
factrainer-core = { workspace = true }
factrainer-sklearn = { workspace = true }
factrainer-lightgbm = { workspace = true }
factrainer-xgboost = { workspace = true }
factrainer-catboost = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = [
    "factrainer-core/src/factrainer",
    "factrainer-sklearn/src/factrainer",
    "factrainer-lightgbm/src/factrainer",
    "factrainer-xgboost/src/factrainer",
    "factrainer-catboost/src/factrainer",
]

[tool.mypy]
files = "."
mypy_path = [
    "$MYPY_CONFIG_FILE_DIR/factrainer-base/src",
    "$MYPY_CONFIG_FILE_DIR/factrainer-core/src",
    "$MYPY_CONFIG_FILE_DIR/factrainer-sklearn/src",
    "$MYPY_CONFIG_FILE_DIR/factrainer-lightgbm/src",
    "$MYPY_CONFIG_FILE_DIR/factrainer-xgboost/src",
    "$MYPY_CONFIG_FILE_DIR/factrainer-catboost/src",
    "tests",
    "stubs",
]
strict = true
plugins = ["pydantic.mypy"]
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--doctest-modules"]
consider_namespace_packages = true
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[tool.ruff.format]
docstring-code-format = true
