[project]
name = "factrainer-base"
version = "0.1.18"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ritsuki1227", email = "ritsuki1227@gmail.com" }]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["numpy>=2.2.5", "pydantic>=2.11.2", "scikit-learn>=1.6.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factrainer"]
