[project]
name = "factrainer-catboost"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ritsuki1227", email = "ritsuki1227@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.7",
    "factrainer-base",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factrainer"]

[tool.uv.sources]
factrainer-base = { workspace = true }
