[project]
name = "factrainer-sklearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ritsuki1227", email = "ritsuki1227@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["factrainer-base"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/factrainer"]

[tool.uv.sources]
factrainer-base = { workspace = true }
